--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!--Add your title here-->
-    <title>SHINXGOD7 - Powered by SuperPhone®</title>
+    <title>SPHINXGOD7 - Powered by SuperPhone®</title>
     
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
