--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url("IMG_20210113_140244_169.jpg");
+     background-image: url("https://sphinxgod7.github.io/Sphinxgod/images/blackmanthe1.jpg");
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
