--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <!--Add your title here-->
     <title>SPHINXGOD7 - Powered by SuperPhone®</title>
-    
+    <h2>blackman image</h2>
+    <img src="https://sphinxgod7.github.io/Sphinxgod/images/blackmanthe1.jpg" alt="blackman image">
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
