--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
                 // Send post to API
                 $.ajax({
-                    url: 'https://superphone.io/w/my-url', // Url where to submit the request
+                    url: 'https://superphone.io/w/E62MyE', // Url where to submit the request
                     type: "POST",
                     beforeSend: function (request) {
                         request.setRequestHeader("Access-Control-Allow-Origin", "*");
