--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url("https://sphinxgod7.github.io/Sphinxgod/images/blackmanthe1.jpg");
+     background-image: url("https://sphinxgod7.github.io/Sphinxgod7/Image/the%20one.jpg");
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
