--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!--Add your title here-->
     <title>SPHINXGOD7 - Powered by SuperPhone®</title>
     <!--This code makes the website responsive-->
+    <h2>the one<h2>
+    <img src="https://sphinxgod7.github.io/Sphinxgod7/Image/the%20one.jpg" alt="the one">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
